# releaser

./: .dockerignore  .gitignore  README.md  devbox.json  pyproject.toml  requirements.txt  setup.cfg
.scripts/: 00-update-pip.sh  10-install-pyright.sh  20-install-pip-tools.sh  30-install-requirements.sh  99-install-project.sh
src/releaser/: __about__.py  __main__.py  adapters.py
src/releaser/cli/: __init__.py  app.py  context.py  testing.py
src/releaser/cli/commands/: analyze_manifest.py  bake_manifest.py  create_manifest.py  upload_manifest.py
src/releaser/hexagon/: errors.py
src/releaser/hexagon/entities/: __init__.py
src/releaser/hexagon/entities/artefact/: __init__.py  (+3 more)
src/releaser/hexagon/ports/: __init__.py  git_reader.py  image_baker.py  json_writer.py  strategy_reader.py  version_reader.py  webhook_client.py
src/releaser/hexagon/services/: manifest_analyzer.py  manifest_baker.py  manifest_generator.py  manifest_notifier.py
src/releaser/infra/_pyproject/: loader.py
src/releaser/infra/git_reader/: stub.py  subprocess.py
src/releaser/infra/image_baker/: buildx.py  stub.py
src/releaser/infra/json_writer/: json_file.py  memory.py  stdout.py  stub.py
src/releaser/infra/strategy_reader/: auto.py  package_json.py  pyproject.py  stub.py
src/releaser/infra/version_reader/: auto.py  json_file.py  pyproject.py  stub.py
src/releaser/infra/webhook_client/: standard_http.py  stub.py
tests/: conftest.py  stubs.py
tests/stubs/: __init__.py  stubs.py
tests/test_adapters/: conftest.py  test_http_client.py
tests/test_adapters/webhook/: __init__.py  embedded_server.py  fake_app.py
tests/test_cli/: conftest.py  test_create_manifest_command.py
tests/test_cli/regression_test_data/: quara-app.package.json  quara-frontend.package.json  quara-python.pyproject.toml
tests/test_hexagon/: conftest.py  test_manifest_generator.py
(+10 files in other folders)
