[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quara-releaser"
dynamic = ["version"]
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" },
]
description = "Command line to ease the release of Quara applications"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "isort",
    "invoke",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "wheel",
    "fastapi",
    "uvicorn",
    "toml",
]

[tool.setuptools.dynamic]
version = { attr = "releaser.__about__.__version__" }

[tool.quara.releaser]
on_commit_msg = [
    { match = "*", tags = [
        { value = "latest" },
        { type = "version" },
        { type = "git_commit_sha", size = 7 },
    ] },
]

[tool.quara.releaser.applications.releaser]
images = [
    { repository = "quara.azurecr.io/releaser", platforms = [
        "linux/amd64",
        "linux/arm64",
    ] },
]

[tool.quara.releaser.applications.releaser-docs]
images = ["quara.azurecr.io/releaser-docs"]
on_commit_msg = [
    { match = "*", tags = [
        { value = "latest" },
        { type = "version", file = "doc-version.json" },
        { type = "version", file = "doc-version.json", minor = true },
        { type = "version", file = "doc-version.json", major = true },
        { type = "git_commit_sha", size = 7 },
    ] },
]

[tool.pyright]
pythonVersion = "3.10"
include = ["tests", "src"]
strict = ["src"]
exclude = [
    "**/.devbox",
    "**/.vscode",
    "**/.venv",
    "**/node_modules",
    "**/__pycache__",
    ".git",
    "**/build",
]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"
